# vibe-js

./: .env  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  structure.txt
my-ai-app/backend/: app.py
vibe/: main.py
vibe/commands/: blame.py  check.py  commit.py  complain.py  create.py  doctor.py  explain.py  fix.py  roast.py  run.py  setup.py  structure.py  sync.py  version.py
vibe/prompts/: prompts.py
vibe/services/: ai.py  cache.py  context.py  files.py  git.py  graph.py  project_index.py  resolver.py  tree.py  validators.py
vibe_js.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
