[project]
name = "vibe-js"
version = "0.1.0"
description = "Funny AI-powered developer CLI"
authors = [
    { name = "Ronald" }
]
dependencies = [
    "typer>=0.12,<0.13",
    "click>=8.1,<8.2",
    "rich>=13.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0",
    "google-genai>=2.0",
]

[project.scripts]
vibe = "vibe.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"